# microphysics_testcases

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  cog.toml  environment.yaml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  references.html  requirements.txt  search.html  searchindex.js  setup.py
_modules/: index.html
_sources/: index.rst.txt
libs/: __init__.py
mock_bindcxx/: index.html  mock.html
mock_microphys/: index.html  microphysics_scheme_wrapper.html  mock_microphysics_scheme.html
pympdata_bulk/: bulk_scheme_condensation.html  index.html
pympdata_microphysics/: bulk_scheme_condensation.html  index.html
scripts/: compile_bindings_levante.sh  mock_python.py  run_microphysics.py  use_microphysics_scheme.py  using_microphysics_scheme_example.py
src_cxx/: index.html  mock.html
src_mock_cxx/: index.html  mock.html
src_mock_py/: calcs.html  index.html  microphysics_scheme_wrapper.html  mock_microphysics_scheme.html  output_thermodynamics.html  thermodynamics.html
src_py/: calcs.html  index.html  microphysics_scheme_wrapper.html  mock.html  mock_microphysics_scheme.html  output_thermodynamics.html  thermodynamics.html
test_cleo/: test_cleo_sdm.py
tests/: __init__.py  conftest.py  index.html  test_101.py  test_case_0dparcel.py  test_cleo_sdm_microphysics_scheme.py  test_graupel_microphysics_scheme.py  test_icon_graupel_microphysics_scheme.py  test_icon_muphys_microphysics_scheme.py  test_icon_satadj_microphysics_scheme.py  test_microphys.py  test_microphysics_scheme.py  test_mock.py  test_mock_cxx.py  test_mock_microphys_microphysics_scheme.py  test_mock_microphysics_scheme.py  test_mock_py_microphysics_scheme.py  test_py_microphysics_scheme.py  test_pympdata_bulk_microphysics_scheme.py
thermo/: formulae.html  (+3 more)
(+203 files in other folders)
